--- a/source/index.html
+++ b/source/index.html
@@ -106,9 +106,9 @@
           </div>
           <div class="weekly-goods__image-contaner">
             <picture>
-              <source media="(min-width: 1050px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop.jpg 2x" >
-              <source media="(min-width: 668px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@1x.jpg 2x" >
-              <img class="weekly-goods__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" width=  alt="Товар недели: корзинка">
+              <source media="(min-width: 1050px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x" width="525px" height="636px" >
+              <source media="(min-width: 668px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x" width="333px" height="404px" >
+              <img class="weekly-goods__image" src="img/triple-set-mobile@1x.jpg 1x" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Товар недели: корзинка">
             </picture>
           </div>
         </div>
@@ -171,7 +171,11 @@
         </table>
         <div class="contacts__map-container">
           <div class="contacts__map-api" id="map">
-              <img src="img/map-mobile@1x.jpg" width="322" height="457" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+            <picture>
+              <source media="(min-width: 1050px)" srcset="img/map-desctop@1x.jpg 1x, img/map-desctop@2x.jpg 2x" width="525px" height="457px" >
+              <source media="(min-width: 668px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x" width="768px" height="457px" >
+              <img src="img/map-mobile@1x.jpg 1x" srcset="img/map-mobile@2x.jpg 2x" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+            </picture>
           </div>
         </div>
         <div class="contacts__btn-container">
