--- a/source/catalog.html
+++ b/source/catalog.html
@@ -56,11 +56,11 @@
       <section class="catalog-items">
         <ul class="catalog-items__list catalog-assortment">
           <li class="catalog-assortment__item good">
-            <a class="good__image" href="">
+            <a class="good__image-container" href="">
               <picture>
-                <source media="(min-width: 1050px)" srcset="img/photo-hare-desctop@1x.jpg 1x, img/photo-hare-desctop@2x.jpg 2x" width="316px" height="462px">
+                <source media="(min-width: 1050px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x" width="316px" height="462px">
                 <source media="(min-width: 668px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x" width="334px" height="334px">
-                <img src="img/photo-hare-mobile@1x.jpg 1x" srcset="img/photo-hare-mobile@2x.jpg 2x" alt="Изображение товара:кролик">
+                <img class="good__image" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@2x.jpg 2x" alt="Изображение товара:кролик">
               </picture>
              </a>
             <div class="good__info-container">
@@ -75,11 +75,11 @@
           </div>
           </li>
           <li class="catalog-assortment__item good">
-            <a class="good__image" href="">
+            <a class="good__image-container" href="">
               <picture>
-                <source media="(min-width: 1050px)" srcset="img/photo-bowl-desctop@1x.jpg 1x, img/photo-bowl-desctop@2x.jpg 2x" width="316px" height="462px">
+                <source media="(min-width: 1050px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x" width="316px" height="462px">
                 <source media="(min-width: 668px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x" width="334px" height="334px">
-                <img src="img/photo-bowl-mobile@1x.jpg 1x" srcset="img/photo-bowl-mobile@2x.jpg 2x" alt="Изображение товара:корзина">
+                <img class="good__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" alt="Изображение товара:корзина">
               </picture>
             </a>
             <div class="good__info-container">
@@ -94,11 +94,11 @@
             </div>
           </li>
           <li class="catalog-assortment__item good">
-            <a class="good__image" href="">
+            <a class="good__image-container" href="">
               <picture>
-                <source media="(min-width: 1050px)" srcset="img/photo-toys-desctop@1x.jpg 1x, img/photo-toys-desctop@2x.jpg 2x" width="316px" height="462px">
+                <source media="(min-width: 1050px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x" width="316px" height="462px">
                 <source media="(min-width: 668px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x" width="334px" height="334px">
-                <img src="img/photo-toys-mobile@1x.jpg 1x" srcset="img/photo-toys-mobile@2x.jpg 2x" alt="Изображение товара:корзина для игрушек">
+                <img class="good__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg 2x" alt="Изображение товара:корзина для игрушек">
               </picture>
             </a>
             <div class="good__info-container">
