--- a/source/index.html
+++ b/source/index.html
@@ -108,7 +108,7 @@
             <picture>
               <source media="(min-width: 1050px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x" width="525px" height="636px" >
               <source media="(min-width: 668px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x" width="333px" height="404px" >
-              <img class="weekly-goods__image" src="img/triple-set-mobile@1x.jpg 1x" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Товар недели: корзинка">
+              <img class="weekly-goods__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Товар недели: корзинка">
             </picture>
           </div>
         </div>
@@ -145,36 +145,38 @@
         <a class="btn reviews__btn" href="#">Написать</a>
       </section>
       <section class="contacts">
-        <h2 class="contacts__title">Контакты</h2>
-        <table class="contacts__specifications">
-          <tr>
-            <td class="contacts__field">
-              e-mail:
-            </td>
-            <td class="contacts__value">
-              <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-            </td>
-          </tr>
-          <tr>
-            <td class="contacts__field">
-              адрес:
-            </td>
-            <td class="contacts__value">
-              <span>
-                г. Санкт-Петербург,
-                ул. Большая
-                Конюшенная,
-                д. 19/8, офис 101
-              </span>
-            </td>
-          </tr>
-        </table>
+        <div class="contacts__container">
+          <h2 class="contacts__title">Контакты</h2>
+          <table class="contacts__specifications">
+            <tr>
+              <td class="contacts__field">
+                e-mail:
+              </td>
+              <td class="contacts__value">
+                <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="contacts__field">
+                адрес:
+              </td>
+              <td class="contacts__value">
+                <span>
+                  г. Санкт-Петербург,
+                  ул. Большая
+                  Конюшенная,
+                  д. 19/8, офис 101
+                </span>
+              </td>
+            </tr>
+          </table>
+        </div>
         <div class="contacts__map-container">
           <div class="contacts__map-api" id="map">
             <picture>
-              <source media="(min-width: 1050px)" srcset="img/map-desctop@1x.jpg 1x, img/map-desctop@2x.jpg 2x" width="525px" height="457px" >
+              <source media="(min-width: 1050px)" srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x" width="525px" height="457px" >
               <source media="(min-width: 668px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x" width="768px" height="457px" >
-              <img src="img/map-mobile@1x.jpg 1x" srcset="img/map-mobile@2x.jpg 2x" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+              <img src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
             </picture>
           </div>
         </div>
