--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,62 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <svg style="display:none">
+      <symbol viewBox="-.8 -.8 17.6 17.6" id="icon-search">
+        <path d="M16.47 14.93l-3.415-3.415A7.67 7.67 0 0 0 14.6 6.899C14.6 2.646 11.153-.8 6.9-.8S-.8 2.646-.8 6.899s3.446 7.7 7.699 7.7c1.734 0 3.326-.58 4.613-1.546l3.417 3.416c.203.202.418.33.771.33a1.1 1.1 0 0 0 1.1-1.1c0-.24-.061-.499-.33-.769zM1.399 6.899a5.5 5.5 0 1 1 11 0c0 3.038-2.462 5.5-5.5 5.5s-5.5-2.461-5.5-5.5z">
+      </symbol>
+      <symbol ViewBox="264.205 370.961 20.294 18.849" id="icon-cart">
+        <path d="M283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0-1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0-1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0-.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0-.316-.596l.854-2.991h.157a.75.75 0 1 0-.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/>
+      </symbol>
+      <symbol viewBox="-259.404 -19.675 40.219 62.411" id="interior">
+         <path d="M-244.227 18.283c-.286.966-.245 2.191.027 3.639.494 2.635 1.687 6.041 2.358 9.67h5.062c.696-3.641 1.949-7.05 2.471-9.683.287-1.445.33-2.66.041-3.617-.275-.899-.89-1.618-2.021-2.303h-5.997c-1.075.679-1.674 1.391-1.941 2.294zM-232.395 38.278h-13.799c-1.293 0-2.299.976-2.299 2.229v2.229h18.397v-2.229c0-1.253-1.006-2.229-2.299-2.229zM-225.262-17.446h-11.732c0-1.244-1.015-2.229-2.3-2.229-1.283 0-2.3.985-2.3 2.229h-11.737l-6.073 25.517c.794-.461 1.589-.992 2.632-.992 1.359 0 2.243.818 2.924 1.375.682.557 1.162.849 1.447.849.292.001.769-.287 1.451-.836.681-.548 1.564-1.358 2.915-1.358 1.349 0 2.237.806 2.919 1.354.684.549 1.161.84 1.451.84.146 0 .338-.073.58-.214.242-.141.53-.353.872-.626.512-.411 1.139-.967 1.99-1.218.284-.085.593-.136.93-.136 1.347 0 2.238.805 2.92 1.354.683.548 1.159.84 1.451.84.287-.002.766-.296 1.445-.85.684-.554 1.571-1.367 2.925-1.367 1.356 0 2.239.817 2.919 1.371.342.276.631.489.872.631.24.143.431.214.575.214.288 0 .762-.293 1.442-.854.68-.559 1.567-1.384 2.929-1.384 1.044 0 1.839.533 2.632.997l-6.079-25.507zM-235.881 33.82h-6.864c-.657 0-1.15.479-1.15 1.115 0 .635.493 1.113 1.15 1.113h6.9c.655 0 1.15-.479 1.15-1.113 0-.636-.495-1.115-1.15-1.115h-.036zM-239.295 9.336c-.146 0-.338.074-.58.213-.157.094-.37.261-.57.41v3.731h2.299V9.959c-.505-.378-.908-.623-1.149-.623z"/>
+      </symbol>
+      <symbol viewBox="226.001 226.19 60 59.62" id="toy">
+         <path d="M226.001 269.871l27.438 15.934v-23.346l-27.438-15.94v23.352zm51.346-31.244v2.453c0 1.817-3.458 3.29-7.73 3.29-4.266 0-7.727-1.473-7.727-3.29v-4.059h.024c.26 1.714 3.604 3.073 7.702 3.073 4.272 0 7.729-1.474 7.729-3.285 0-1.819-3.457-3.289-7.729-3.289-.339 0-.675.01-1.002.03l-4.975-2.888v3.086c0 1.817-3.454 3.29-7.723 3.29-2.683 0-5.045-.583-6.433-1.467a3.928 3.928 0 0 0-.732-.586c-.363-.381-.565-.797-.565-1.236v-2.986l-4.807 2.792a21.384 21.384 0 0 0-1.054-.033c-4.267 0-7.727 1.469-7.727 3.289 0 1.811 3.46 3.285 7.727 3.285 4.099 0 7.446-1.358 7.705-3.073h.022v4.059c0 1.817-3.455 3.29-7.727 3.29-4.267 0-7.727-1.473-7.727-3.29v-2.42l-5.952 3.452 27.531 15.986 27.351-15.882-6.181-3.591zm-13.644 10.166c0 1.817-3.46 3.287-7.727 3.287-4.269 0-7.729-1.47-7.729-3.287v-4.059h.024c.26 1.715 3.603 3.076 7.705 3.076 4.101 0 7.443-1.361 7.705-3.076h.021v4.059h.001zm-5.145 13.873v23.144L286 269.871v-23.144l-27.442 15.939zm-2.641-29.904c4.269 0 7.723-1.47 7.723-3.286 0-1.814-3.454-3.287-7.723-3.287-4.27 0-7.729 1.472-7.729 3.287-.001 1.816 3.459 3.286 7.729 3.286"/>
+      </symbol>
+      <symbol viewBox="8.014 4.35 31.972 37.301" id="feature-flower">
+        <path d="M24,41.65c8.827,0,15.986-7.159,15.986-15.986C31.158,25.664,24,32.822,24,41.65z M12.641,20.78 c0,2.451,1.989,4.441,4.44,4.441c0.932,0,1.803-0.294,2.513-0.782l-0.036,0.337c0,2.451,1.99,4.441,4.441,4.441s4.44-1.99,4.44-4.441l-0.036-0.337c0.719,0.497,1.582,0.782,2.514,0.782c2.451,0,4.44-1.99,4.44-4.441 c0-1.768-1.038-3.286-2.54-3.997c1.492-0.71,2.54-2.229,2.54-3.997c0-2.451-1.989-4.44-4.44-4.44c-0.932,0-1.803,0.293-2.514,0.781 L28.44,8.79c0-2.451-1.989-4.44-4.44-4.44s-4.441,1.99-4.441,4.44l0.036,0.337c-0.719-0.497-1.581-0.781-2.513-0.781 c-2.451,0-4.44,1.99-4.44,4.44c0,1.768,1.039,3.286,2.54,3.997C13.68,17.494,12.641,19.012,12.641,20.78z M24,12.343 c2.451,0,4.44,1.989,4.44,4.44c0,2.451-1.989,4.44-4.44,4.44s-4.441-1.99-4.441-4.44C19.559,14.332,21.549,12.343,24,12.343z  M8.014,25.664c0,8.827,7.158,15.986,15.986,15.986C24,32.822,16.842,25.664,8.014,25.664z"/>
+      </symbol>
+      <symbol viewBox="46.212 56.834 46.575 27.332" id="feature-money">
+        <path d="M88.882,56.834H50.116c-2.156,0-3.904,1.749-3.904,3.905v19.521c0,2.156,1.748,3.905,3.904,3.905h38.766 c2.156,0,3.905-1.749,3.905-3.905V60.739C92.787,58.583,91.038,56.834,88.882,56.834z M49.235,81.784V59.551h40.202v22.233H49.235z"/>
+        <path d="M53.14,77.88h32.395V63.456H53.14V77.88z M69.5,65.354c2.936,0,5.315,2.38,5.315,5.314c0,2.936-2.379,5.314-5.315,5.314 s-5.314-2.379-5.314-5.314C64.185,67.733,66.564,65.354,69.5,65.354z"/>
+      </symbol>
+      <symbol viewBox="47.475 50.071 33.05 27.857" id="feature-heart">
+        <path d="M80.525,58.808c0-4.825-3.912-8.736-8.736-8.736c-3.405,0-6.348,1.951-7.789,4.793 c-1.441-2.842-4.384-4.793-7.789-4.793c-4.825,0-8.736,3.911-8.736,8.736c0,9.127,14.657,19.121,16.525,19.121 C65.869,77.929,80.525,67.979,80.525,58.808z"/>
+      </symbol>
+      <symbol viewBox="0 0 34.373 34.373" id="feature-ball">
+        <g>
+          <path d="M0.286,14.069c-0.382,2.073-0.384,4.211,0.008,6.301l4.121-3.21L0.286,14.069z"/>
+          <path d="M24.403,1.585C19.62-0.623,13.959-0.559,9.149,1.992l7.513,5.625L24.403,1.585z"/>
+          <path d="M33.901,13.175l-4.811,3.748l4.936,3.695C34.522,18.173,34.489,15.63,33.901,13.175z"/>
+          <path d="M9.209,32.414c4.844,2.534,10.724,2.65,15.73,0.113l-8.096-6.062L9.209,32.414z"/>
+          <path d="M7.914,14.433L1.681,9.767c-0.32,0.669-0.595,1.356-0.825,2.056l5.308,3.974L7.914,14.433z"/>
+          <path d="M18.593,25.102l8.336,6.242c0.277-0.191,0.551-0.391,0.82-0.601c0.318-0.248,0.625-0.505,0.92-0.771l-8.326-6.234 L18.593,25.102z"/>
+          <path d="M11.413,11.707L4.002,6.158C3.54,6.709,3.117,7.285,2.733,7.881l6.931,5.189L11.413,11.707z"/>
+          <path d="M22.093,22.375l8.092,6.059c0.471-0.544,0.904-1.112,1.297-1.701l-7.639-5.721L22.093,22.375z"/>
+          <path d="M14.913,8.98L7.196,3.203C7.003,3.341,6.812,3.482,6.623,3.629C6.227,3.938,5.849,4.261,5.487,4.597l7.676,5.747 L14.913,8.98z"/>
+          <path d="M25.592,19.649l6.972,5.221c0.33-0.662,0.615-1.341,0.855-2.033l-6.077-4.55L25.592,19.649z"/>
+          <path d="M26.448,2.706L0.88,22.626c0.233,0.698,0.513,1.386,0.839,2.059l26.52-20.663C27.667,3.541,27.068,3.102,26.448,2.706z"/>
+          <path d="M30.743,6.624c-0.301-0.386-0.614-0.754-0.939-1.106L2.786,26.567c0.262,0.402,0.542,0.797,0.843,1.183 c0.142,0.183,0.288,0.359,0.436,0.534L31.155,7.176C31.021,6.99,30.886,6.806,30.743,6.624z"/>
+          <path d="M32.298,8.999L5.552,29.838c0.544,0.501,1.114,0.962,1.708,1.382l25.962-20.228C32.959,10.314,32.651,9.648,32.298,8.999z"/>
+        </g>
+      </symbol>
+      <symbol viewBox="612.532 500.386 54.156 23.183" id="feature-rocket">
+        <g>
+          <path d="M652.844,506.098c-3.647-0.971-7.839-1.667-12.359-1.666c-2.891,0.001-5.457,0.243-7.71,0.623l-6.784-4.668l-13.456,0.005 l5.811,6.184h8.447c-4.58,1.598-6.759,3.515-6.759,3.515l0.002,3.777c0,0,2.313,1.912,6.931,3.518l-8.623-0.005l-5.811,6.188 l13.455,0.002l6.816-4.692c2.261,0.398,4.822,0.647,7.681,0.648c4.522-0.001,8.712-0.697,12.36-1.667 c-1.176-1.775-1.915-3.743-1.918-5.877C650.93,509.842,651.665,507.871,652.844,506.098z"/>
+          <path d="M656.267,507.132c-1.284,1.605-1.969,3.25-1.965,4.84c-0.007,1.597,0.677,3.238,1.968,4.847 c6.399-2.162,10.419-4.841,10.419-4.841S662.67,509.298,656.267,507.132z"/>
+        </g>
+      </symbol>
+      <symbol viewBox="239.665 239.757 32.666 32.486" id="feature-gift">
+        <path d="M242.56,272.243h12.504v-13.91H242.56V272.243z M270.742,248.623h-7.335 c0.521-0.267,0.984-0.549,1.396-0.845c1.588-1.133,2.424-2.57,2.42-3.999c0.002-1.169-0.556-2.202-1.359-2.901 c-0.805-0.704-1.869-1.119-3.016-1.121c-1.22-0.001-2.352,0.421-3.32,1.069c-1.459,0.979-2.606,2.451-3.424,4.067 c-0.039,0.079-0.078,0.157-0.115,0.236c-0.299-0.623-0.647-1.226-1.041-1.792c-0.691-0.985-1.523-1.86-2.497-2.511 c-0.97-0.646-2.103-1.069-3.322-1.069c-1.213,0.004-2.323,0.514-3.155,1.295c-0.828,0.783-1.41,1.885-1.412,3.135 c-0.002,0.73,0.211,1.494,0.649,2.188c0.552,0.872,1.424,1.628,2.633,2.248h-6.588c-0.878,0-1.591,0.712-1.591,1.59v5.897h15.396 v-7.488h1.873v7.488h15.396v-5.897C272.333,249.334,271.621,248.623,270.742,248.623 M248.38,246.284 c-0.622-0.391-1-0.785-1.22-1.135c-0.22-0.354-0.294-0.662-0.296-0.963c-0.004-0.504,0.248-1.042,0.691-1.461 c0.437-0.415,1.028-0.667,1.562-0.667h0.013c0.685,0,1.366,0.231,2.046,0.683c1.018,0.671,1.975,1.85,2.645,3.187 c0.342,0.676,0.609,1.39,0.789,2.087C251.528,247.694,249.532,247.013,248.38,246.284 M258.917,244.657 c0.557-0.797,1.21-1.466,1.887-1.916c0.68-0.451,1.362-0.683,2.047-0.683h0.006c0.574,0,1.117,0.22,1.494,0.55 c0.377,0.336,0.571,0.739,0.573,1.171c-0.004,0.512-0.272,1.259-1.467,2.132c-1.138,0.825-3.101,1.673-6.127,2.265 C257.62,246.974,258.177,245.704,258.917,244.657 M256.937,272.243h12.506v-13.91h-12.506V272.243z"/>
+      </symbol>
+      <symbol viewBox="-11.34 -28.346 46.68 81.691" id="contacts-flag">
+          <path fill="#63D1BB" d="M-3.561-24.455v38.9l38.9-19.451-38.9-19.449zm-7.779 77.801v-81.691h3.805v81.691h-3.805z"/>
+          <g>
+            <path fill="#231F20" d="M-11.34-28.346h3.805v81.691h-3.805z"/>
+          </g>
+      </symbol>
+    </svg>
     <header class="main-header main-header--index">
       <a class="main-header__logo">
         <picture>
@@ -38,10 +94,17 @@
             </ul>
             <ul class="main-nav__list user-nav">
               <li class="user-nav__item user-nav__search">
-                <a class="search" href=""><span>Поиск по сайту</span></a>
+                <a class="user-nav__search-link" href="">
+                  <svg class="user-nav__search-icon" width="18" height="19"><use xlink:href="#icon-search"></use></svg>
+                  <span>Поиск по сайту</span>
+                </a>
               </li>
               <li class="user-nav__item user-nav__cart">
-                <a href="">Корзина: пока пуста</a>
+                <a href="">
+                  <svg class="user-nav__cart-icon" width="18" height="19"><use xlink:href="#icon-cart"></use></svg>
+                  Корзина: пока пуста
+                </a>
+              </li>
             </ul>
             <p class="user-nav__delivery">
               Бесплатная доставка по России
@@ -57,11 +120,13 @@
         <ul class="directions__list">
           <li class="directions__item">
             <a class="directions__link" href="">
+              <svg class="directions__icon" width="40" height="62"><use xlink:href="#interior"></use></svg>
               <span>Предметы интерьера</span>
             </a>
           </li>
           <li class="directions__item">
             <a class="directions__link" href="">
+              <svg class="directions__icon" width="60" height="60"><use xlink:href="#toy"></use></svg>
               <span>Детские игрушки</span>
             </a>
           </li>
@@ -116,12 +181,29 @@
       <section class="advantages">
         <h2 class="advantages__title">Коротко о нас:</h2>
         <ul class="advantages__list">
-          <li class="advantages__item">Экологически чистые материалы</li>
-          <li class="advantages__item">Скандинавский стиль по российской цене</li>
-          <li class="advantages__item">Увеличивает лайки на фотографиях</li>
-          <li class="advantages__item">Связано вручную с любовью и умилением</li>
-          <li class="advantages__item">Поддержка отечественного производителя</li>
-          <li class="advantages__item">Поставляется в подарочной упаковке</li>
+          <li class="advantages__item">
+            <svg class="advantages__icon" width="33" height="38"><use xlink:href="#feature-flower"></use></svg>
+            Экологически чистые материалы
+          </li>
+          <li class="advantages__item">
+            <svg class="advantages__icon" width="47" height="27"><use xlink:href="#feature-money"></use></svg>
+            Скандинавский стиль по российской цене
+          </li>
+          <li class="advantages__item">
+            <svg class="advantages__icon" width="34" height="27"><use xlink:href="#feature-heart"></use></svg>
+            Увеличивает лайки на фотографиях
+          </li>
+          <li class="advantages__item">
+            <svg class="advantages__icon" width="35" height="34"><use xlink:href="#feature-ball"></use></svg>
+            Связано вручную с любовью и умилением
+          </li>
+          <li class="advantages__item">
+            <svg class="advantages__icon" width="55" height="23"><use xlink:href="#feature-rocket"></use></svg>
+            Поддержка отечественного производителя
+          </li>
+          <li class="advantages__item">
+            <svg class="advantages__icon" width="33" height="32"><use xlink:href="#feature-gift"></use></svg>
+            Поставляется в подарочной упаковке</li>
         </ul>
       </section>
       <section class="reviews">
@@ -146,7 +228,10 @@
       </section>
       <section class="contacts">
         <div class="contacts__container">
-          <h2 class="contacts__title">Контакты</h2>
+          <h2 class="contacts__title">
+            <svg class="contacts__flag-icon" width="47" height="81"><use xlink:href="#contacts-flag"></use></svg>
+            Контакты
+          </h2>
           <table class="contacts__specifications">
             <tr>
               <td class="contacts__field">
