--- a/source/index.html
+++ b/source/index.html
@@ -71,6 +71,21 @@
       <symbol viewBox="52.253 53.771 23.494 20.168" id="footer-twitter">
         <path d="M75.706 57.855c-.227-.366-.909-.277-1.407-.371h-1.112c.142-.353.343-.646.52-.963.056-.438.254-.734.223-1.26.129-.167.176-.417.296-.593.104-.144.242-.477.074-.667-.051-.221-.295-.249-.593-.222a.515.515 0 0 0-.222.148c-.448.433-.778 1.014-1.261 1.408-.009.008-.062 0-.074 0-.087.005-.033.046-.075.074-.146.098-.257.152-.369.223-.284.176-.547.445-.891.519-.529-.211-1.156-.326-1.852-.37-1.157.102-2.303.215-3.038.741-.911.35-1.477 1.042-2.149 1.63-.049.32-.342.398-.37.741-.005.045-.012.088-.073.074.043.241-.051.345-.074.519-.001.133.199.431 0 .52-.822-.12-1.485-.63-2.149-.964-.718-.36-1.468-.604-2.074-1.111-.716-.322-1.26-.816-1.778-1.334-.208-.312-.542-.496-.667-.89-.379-.164-.175-.912-.741-.889-.315-.043-.345.199-.444.37-.07.227-.361.232-.371.519-.004.046-.011.088-.074.075-.17 1.089-.527 1.992-.519 3.26.129.415.35.738.593 1.038-.418.051-.716.222-.89.519-.06 1.073.378 1.647.742 2.297.134.384.352.685.593.963.017.229.206.288.296.445.019.105.123.125.149.223-.04.105.289.18.073.221-.413.131-1.016.07-1.259.371-.109.279-.109.833 0 1.111.034.237.282.262.296.519.499.417 1.082.747 1.631 1.112.574.166 1.211.271 1.852.37-.102.343-.338.551-.593.741-.78.381-1.849.474-2.742.74-.555.038-.956.23-1.556.223-.333.127-.854.075-1.112.223-.122.068-.102.096-.222.221-.134.412.111.74.444.89-.005.253.219.276.371.371.089.183.254.29.445.37.544.468 1.268.759 1.927 1.112.83.183 1.648.376 2.52.519.896.116 1.901.124 2.816.222h.963c.511.132 1.23.054 1.853.074.095-.102.322-.073.519-.074.522-.269 1.196-.385 1.631-.74.574-.241.989-.642 1.557-.89.866-.765 1.937-1.324 2.519-2.37.205-.189.351-.438.445-.74.265-.156.385-.454.593-.667.404-.41.706-.924 1.037-1.4.319-.496.576-1.054.89-1.556-.01-.405.306-.484.296-.89.193-.226.177-.662.371-.88-.033-.255.029-.415.074-.594.047-1.281-.047-2.422-.297-3.407.588-.155 1.181-.302 1.631-.593.52-.206.993-.603.808-1.281zm-3.408 4.076c-.153.859-.615 1.41-1.038 2.001.059.379-.104.538-.073.889a4.303 4.303 0 0 0-.371 1.037c-.203.267-.332.606-.519.89-.366.548-.777 1.051-1.186 1.557-.378.56-.912.965-1.334 1.481-.42.493-.942.885-1.407 1.334-.474.17-.89.396-1.26.667a5.06 5.06 0 0 0-.667.296c-.177.146-.499.145-.668.29-1.086.147-2.3.17-3.555.148-1.031-.105-2.115-.159-3.039-.371-.922-.189-1.511-.712-2.297-1.037.153-.242.634-.154.963-.222.031-.166.394-.003.444-.149.257.06.285-.109.52-.07.563-.201 1.23-.302 1.705-.593.282-.138.406-.434.667-.593.033-.189.104-.341.222-.444.047-.275.201-.441.148-.815.111-.21.299-.343.296-.667-.074-.147-.128-.316-.296-.371-.026-.196-.377-.067-.444-.222-.255.032-.416-.029-.593-.075-.154-.043-.487.092-.519-.073-.842-.023-1.3-.43-1.853-.74.431-.262 1.032-.353 1.333-.742.516-.076 1.058-.129 1.112-.666 0-.717-.771-.661-1.333-.815-.773-.66-1.194-1.672-1.779-2.52.238-.157.564-.226.741-.444.454.058.54-.251.667-.52.019-.488-.333-.605-.593-.815a3.49 3.49 0 0 1-.667-.74c-.003-.818-.021-1.652.074-2.372.063-.014.07.029.074.074.227.441.559.775.815 1.186.532.357.925.853 1.556 1.112.452.413 1.108.621 1.557 1.038.601.263 1.158.57 1.704.889.669.194 1.056.673 2.001.593.198-.098.394-.199.593-.297.258-.456-.059-1.079.147-1.63.255-.659.797-1.031 1.26-1.481.29-.155.555-.335.815-.519.347-.098.675-.216.964-.37a6.223 6.223 0 0 0 1.037-.148h1.26c.244.052.475.119.74.148.209.137.38.313.666.371.789.693 1.271 1.696 1.409 3.039-.122.484.053.873.001 1.481zm.296-5.632c-.129.34-.23.707-.593.815-.017-.105-.122-.125-.147-.222-.012-.209.209-.186.296-.296.162-.085.245-.248.444-.297-.007-.09.108-.046 0 0zm-5.484 3.038c.163.135.284.31.519.371.101.221.314.327.594.37.047-.15.346-.049.37-.222.174-.023.166-.229.296-.297-.018-.55-.129-1.006-.37-1.333-.758-.423-1.676.039-1.409 1.111z"/>
       </symbol>
+      <symbol viewBox="0 0 26.943 34.09" id="footer-htmlacademy">
+        <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+      </symbol>
+      <symbol viewBox="0 0 101.615 34.056" id="footer-mishka">
+        <g>
+          <path d="M19.135,21.495c-0.083-2.683-0.51-5.347-0.475-8.035c0.028-2.174,0.389-4.41-0.36-6.495 c0.047-0.237,0.096-0.473,0.14-0.711c0.193-1.045-3.271-0.492-3.813,0.464c-0.343,0.28-0.519,0.615-0.375,0.957 c0.037,0.086,0.069,0.174,0.102,0.261c-0.656,3.204-1.57,6.306-2.621,9.412c-0.402,1.188-0.888,2.349-1.298,3.533 c-0.582-1.104-1.169-2.194-1.643-3.377C7.418,14.071,6.18,10.602,4.505,7.298C4.695,5.77,1.301,5.93,0.632,7.33 c-0.809,1.694-0.705,3.403-0.438,5.214c0.3,2.042,0.353,4.05,0.377,6.111c0.047,3.976,0.358,7.943,0.417,11.919 c-0.354,0.395-0.461,0.881-0.091,1.375c0.162,0.216,0.361,0.382,0.571,0.549c0.904,0.724,3.5,0.107,3.496-1.271 c-0.014-4.123-0.312-8.238-0.42-12.358c-0.011-0.404-0.018-0.807-0.024-1.21c0.057,0.145,0.114,0.29,0.171,0.434 c0.64,1.604,1.31,3.163,2.185,4.654c0.868,1.478,1.303,3.064,1.803,4.677c-0.189,0.217-0.303,0.462-0.233,0.708 c-0.039,0.18,0.07,0.292,0.251,0.36c0.639,0.548,1.841,0.274,2.509-0.007c0.287-0.121,0.561-0.261,0.826-0.424 c0.345-0.212,0.883-0.679,0.729-1.159c-0.03-0.093-0.058-0.186-0.087-0.279c0.47-1.27,0.709-2.589,0.965-3.93 c0.272-1.428,0.782-2.78,1.295-4.133c0.052,0.619,0.106,1.238,0.156,1.855c0.204,2.554,0.033,5.072,0.007,7.626 c-0.008,0.847,0.054,1.633,0.219,2.461c0.068,0.343,0.367,1.808,0.281,1.887c-0.611,0.564-0.433,1.257,0.385,1.437 c0.915,0.201,2.081-0.105,2.77-0.742c1.198-1.106,0.632-2.845,0.361-4.241C18.661,26.501,19.208,23.879,19.135,21.495z"/>
+          <path d="M27.499,22.17c-0.074-1.988-0.765-3.862-0.774-5.872c-0.011-2.305,0.181-4.593-0.155-6.886 c-0.106-0.725-4.056,0.1-3.917,1.05c0.309,2.11,0.197,4.229,0.159,6.354c-0.037,2.044,0.468,3.898,0.73,5.904 c0.269,2.054-0.084,4.157,0.149,6.213c0.109,0.962,0.75,2.743,0.089,3.58c-0.42,0.532,1.469,0.342,1.553,0.326 c0.769-0.142,1.793-0.392,2.304-1.038c0.653-0.828,0.196-2.426,0.053-3.357C27.374,26.385,27.576,24.249,27.499,22.17z"/>
+          <path d="M43.828,18.851c-2.062-2.784-5.889-0.78-8.561-1.54c-1.377-0.392-1.395-2.271-1.392-3.396 c0.004-1.426-0.114-2.732-0.273-4.146c-0.119-1.052-0.024-2.121,0.746-2.904c0.142-0.144,0.859-0.336,0.81-0.339 c0.354-0.061,0.676-0.076,1.067-0.093c1.549-0.066,4.613,0.232,4.019,2.483c-0.266,1.01,3.596,0.431,3.877-0.637 c1.213-4.598-7.284-3.714-9.686-3.078C32.225,5.789,29.787,7.047,29.66,9.6c-0.061,1.219,0.273,2.379,0.325,3.587 c0.061,1.39-0.198,2.776,0.289,4.118c1.082,2.982,5.52,1.576,7.778,1.745c3.845,0.287,2.697,5.469,2.748,7.883 c0.027,1.288,1.181,3.429,0.211,4.507c-0.595,0.662-1.982,0.699-2.792,0.768c-0.813,0.068-2.201,0.312-2.742-0.461 c-0.993-1.418,0.091-3.799-0.121-5.425c-0.121-0.924-4.066-0.095-3.917,1.05c0.342,2.627-1.399,6.145,2.402,6.596 c2.441,0.289,5.191-0.161,7.5-0.928c1.196-0.396,2.307-0.942,3.243-1.793c1.035-0.941,0.694-2.348,0.417-3.547 C44.324,24.782,45.732,21.421,43.828,18.851z"/>
+          <path d="M61.155,18.662c-0.122-3.777-0.69-7.513-0.706-11.297c-0.008-1.971-3.963-1.305-3.957,0.343 c0.015,3.608,0.497,7.167,0.682,10.764c0.004,0.074,0.008,0.147,0.013,0.221c-1.949-0.018-3.899,0.177-5.853,0.246 c0.201-4.633-0.611-9.227-0.435-13.857c0.022-0.582-3.874-0.09-3.917,1.049c-0.171,4.475,0.587,8.915,0.453,13.392 c-0.064,2.136-0.245,4.264-0.259,6.402c-0.007,1.095,0.171,2.183,0.329,3.263c0.146,0.999,0.484,2.331,0.182,3.318 c-0.237,0.772,3.561,0.29,3.862-0.694c0.544-1.778-0.222-4.039-0.405-5.839c-0.175-1.725-0.039-3.499,0.083-5.248 c2.03-0.13,4.059-0.297,6.08-0.012c0.09,1.378,0.196,2.754,0.322,4.134c0.105,1.157,0.179,2.313,0.196,3.475 c0.015,1.019,0.142,2.496-0.221,3.461c-0.773,2.057,3.15,1.889,3.723,0.364c0.703-1.87,0.502-4.199,0.383-6.164 C61.562,23.54,61.233,21.109,61.155,18.662z"/>
+          <path d="M78.087,23.136c-0.939-2.758-2.373-5.177-3.616-7.797c1.001-1.949,2.018-3.898,2.932-5.888 c0.831-1.808,1.446-3.819,3.08-5.092c0.574-0.447,0.55-0.896-0.255-0.951c-0.875-0.061-2.064,0.192-2.77,0.742 c-1.485,1.158-2.427,2.563-3.201,4.268c-0.932,2.051-1.896,4.063-2.914,6.075c-0.074,0.147-0.149,0.295-0.224,0.443 c-0.49,0.315-0.785,0.762-0.639,1.266c-0.792,1.563-1.6,3.117-2.499,4.61c-0.299-5.534-0.955-11.061-1.15-16.6 c-0.045-1.27-3.971-0.479-3.917,1.049c0.243,6.868,1.219,13.719,1.286,20.587c-0.016,0.017-0.031,0.034-0.047,0.051 c-0.301,0.308-0.19,0.494,0.051,0.602c0.002,1.75-0.059,3.501-0.209,5.254c-0.472,0.745,0.463,1.139,1.084,1.139 c0.032,0,0.064,0,0.096,0c0.739,0,2.626-0.35,2.718-1.364c0.191-2.1,0.251-4.196,0.232-6.291c1.59-1.715,2.89-3.63,4.055-5.635 c0.759,1.48,1.482,2.972,1.989,4.582c0.861,2.741,2.299,5.261,3.131,8.014c0.544,1.806,4.457,0.738,3.917-1.049 C80.388,28.398,79.013,25.854,78.087,23.136z"/>
+          <path d="M101.59,18.501c-0.21-0.832-1.372-0.849-2.271-0.77c-0.012-0.335-0.02-0.671-0.036-1.006 c-0.125-2.661-0.165-5.379-0.392-8.032c-0.209-2.458-1.585-3.337-3.972-3.247c-2.416,0.092-5.229,0.527-7.482,1.403 c-2.607,1.014-4.058,2.935-4.559,5.681c-0.549,3.014,0.24,6.219,0.373,9.246c0.154,3.503,0.066,7.014,0.062,10.519 c0,0.573,3.916,0.031,3.917-1.049c0.003-2.776,0.042-5.551,0-8.327c-0.013-0.818-0.051-1.632-0.102-2.444 c1.369-0.593,3.687,0.012,5.05,0.141c1.107,0.104,2.169-0.166,3.244-0.292c0.021,2.312,0.107,4.635,0.202,6.944 c0.049,1.184,0.477,3.53-0.354,4.511c-0.437,0.516,1.48,0.343,1.555,0.33c0.793-0.146,1.761-0.401,2.303-1.041 c0.949-1.12,0.456-3.79,0.401-5.126c-0.078-1.91-0.102-3.824-0.141-5.737C100.542,20.058,101.805,19.351,101.59,18.501z M86.972,18.351c-0.103-1.245-0.217-2.49-0.303-3.743c-0.16-2.331,0.117-5.583,2.29-6.999c0.58-0.379,1.675-0.315,2.354-0.438 c0.97-0.176,1.956-0.389,2.829,0.19c1.21,0.802,0.912,3.657,0.911,4.869c-0.003,2.005,0.207,4.001,0.31,6.003 c-0.552,0.055-1.111,0.089-1.683,0.076C91.394,18.256,89.136,17.896,86.972,18.351z"/>
+          <path d="M24.108,6.7c0.521-0.05,1.045-0.226,1.477-0.524c0.085-0.072,0.171-0.144,0.256-0.216c0.52-0.335,0.972-0.827,0.728-1.361 c-0.504-1.105-0.423-2.231-0.416-3.414c0.006-0.958-0.963-1.246-1.781-1.174c-0.723,0.063-2.168,0.581-2.175,1.52 c-0.006,0.993-0.071,2.016,0.109,2.992c-0.047,0.113-0.074,0.239-0.104,0.355c-0.055,0.212,0.016,0.42,0.142,0.59 c0,0.045,0.002,0.089,0.002,0.134c0.005,0.112,0.01,0.224,0.015,0.335c0.073,0.232,0.216,0.409,0.429,0.53 C23.178,6.7,23.668,6.742,24.108,6.7z"/>
+        </g>
+        </svg>
+      </symbol>
     </svg>
     <header class="main-header main-header--index">
       <a class="main-header__logo">
@@ -82,7 +97,7 @@
       </a>
       <nav class="main-nav main-nav--index">
         <div class="main-nav__toggle-contatainer">
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <button class="main-nav__toggle main-nav__toggle--off main-nav__toggle--on" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
         <div class="main-nav__wrapper">
             <ul class="main-nav__list site-nav">
@@ -125,17 +140,17 @@
       <h1 class="visually-hidden">Магазин вязаных игрушек ручной работы</h1>
       <section class="directions">
         <h2 class="visually-hidden">Наши основные направления</h2>
-        <p class="directions__info">Милые штуки ручной работы для дома</p>
+        <p class="directions__info">Милые штуки ручной работы&nbsp;для дома</p>
         <ul class="directions__list">
           <li class="directions__item">
             <a class="directions__link" href="">
-              <svg class="directions__icon" width="40" height="62"><use xlink:href="#interior"></use></svg>
+              <svg class="directions__icon directions__icon--interior" width="40" height="62"><use xlink:href="#interior"></use></svg>
               <span>Предметы интерьера</span>
             </a>
           </li>
           <li class="directions__item">
             <a class="directions__link" href="">
-              <svg class="directions__icon" width="60" height="60"><use xlink:href="#toy"></use></svg>
+              <svg class="directions__icon directions__icon--toy" width="60" height="60"><use xlink:href="#toy"></use></svg>
               <span>Детские игрушки</span>
             </a>
           </li>
@@ -191,28 +206,28 @@
         <h2 class="advantages__title">Коротко о нас:</h2>
         <ul class="advantages__list">
           <li class="advantages__item">
-            <svg class="advantages__icon" width="33" height="38"><use xlink:href="#feature-flower"></use></svg>
-            Экологически чистые материалы
+            <svg class="advantages__icon advantages__icon--flower" width="33" height="38"><use xlink:href="#feature-flower"></use></svg>
+            <span>Экологически чистые&nbsp;материалы</span>
           </li>
           <li class="advantages__item">
-            <svg class="advantages__icon" width="47" height="27"><use xlink:href="#feature-money"></use></svg>
-            Скандинавский стиль по российской цене
+            <svg class="advantages__icon advantages__icon--money" width="47" height="27"><use xlink:href="#feature-money"></use></svg>
+            Скандинавский стиль по&nbsp;российской цене
           </li>
           <li class="advantages__item">
-            <svg class="advantages__icon" width="34" height="27"><use xlink:href="#feature-heart"></use></svg>
-            Увеличивает лайки на фотографиях
+            <svg class="advantages__icon advantages__icon--heart" width="34" height="27"><use xlink:href="#feature-heart"></use></svg>
+            Увеличивает лайки на&nbsp;фотографиях
           </li>
           <li class="advantages__item">
-            <svg class="advantages__icon" width="35" height="34"><use xlink:href="#feature-ball"></use></svg>
-            Связано вручную с любовью и умилением
+            <svg class="advantages__icon advantages__icon--ball" width="35" height="34"><use xlink:href="#feature-ball"></use></svg>
+            Связано вручную с любовью&nbsp;и умилением
           </li>
           <li class="advantages__item">
-            <svg class="advantages__icon" width="55" height="23"><use xlink:href="#feature-rocket"></use></svg>
+            <svg class="advantages__icon advantages__icon--rocket" width="55" height="23"><use xlink:href="#feature-rocket"></use></svg>
             Поддержка отечественного производителя
           </li>
           <li class="advantages__item">
-            <svg class="advantages__icon" width="33" height="32"><use xlink:href="#feature-gift"></use></svg>
-            Поставляется в подарочной упаковке</li>
+            <svg class="advantages__icon advantages__icon--gift" width="33" height="32"><use xlink:href="#feature-gift"></use></svg>
+            Поставляется в подарочной&nbsp;упаковке</li>
         </ul>
       </section>
       <section class="reviews">
@@ -229,8 +244,8 @@
             </blockquote>
           </div>
           <p class="reviews__toggles slider__toggles">
-              <button class="slider__toggle" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
-              <button class="slider__toggle" type="button"><span class="visually-hidden">Слудующий отзыв</span></button>
+              <button class="slider__toggle slider__toggle--previous" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
+              <button class="slider__toggle slider__toggle--next" type="button"><span class="visually-hidden">Слудующий отзыв</span></button>
           </p>
         </div>
         <a class="btn reviews__btn" href="#">Написать</a>
@@ -242,7 +257,7 @@
             Контакты
           </h2>
           <table class="contacts__specifications">
-            <tr>
+            <tr class="contacts__tr--first">
               <td class="contacts__field">
                 e-mail:
               </td>
@@ -250,16 +265,15 @@
                 <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
               </td>
             </tr>
-            <tr>
+            <tr class="contacts__tr--second">
               <td class="contacts__field">
                 адрес:
               </td>
               <td class="contacts__value">
                 <span>
-                  г. Санкт-Петербург,
-                  ул. Большая
-                  Конюшенная,
-                  д. 19/8, офис 101
+                  г.&nbsp;Санкт-Петербург,
+                  ул.&nbsp;Большая Конюшенная,
+                  д.&nbsp;19/8,&nbsp;офис&nbsp;101
                 </span>
               </td>
             </tr>
@@ -280,36 +294,36 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="main-footer__container">
       <a class="main-footer__logo">
-        <img class="main-footer__logo-img" src="img/logo-tablet.svg" alt="Мишка">
+        <svg class="main-footer__logo-img" width="102" height="34"><use xlink:href="#footer-mishka"></use></svg>
       </a>
+      <div class="main-footer__container">
         <ul class="main-footer__social social-list">
-          <li class="social-list__item social-list__item--insta">
+          <li class="social-list__item">
             <a class="social-list__link" href="">
-              <svg class="main-footer__social-logo" width="22" height="21"><use xlink:href="#footer-instagram"></use></svg>
+              <svg class="main-footer__social-logo main-footer__social-logo--insta" width="22" height="21"><use xlink:href="#footer-instagram"></use></svg>
               <span class="visually-hidden">Instagram</span>
             </a>
           </li>
-          <li class="social-list__item social-list__item--fb">
+          <li class="social-list__item">
             <a class="social-list__link" href="">
-              <svg class="main-footer__social-logo" width="22" height="21"><use xlink:href="#footer-facebook"></use></svg>
+              <svg class="main-footer__social-logo main-footer__social-logo--fb" width="15" height="28"><use xlink:href="#footer-facebook"></use></svg>
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
-          <li class="social-list__item social-list__item--twit">
+          <li class="social-list__item">
             <a class="social-list__link" href="">
-              <svg class="main-footer__social-logo" width="22" height="21"><use xlink:href="#footer-twitter"></use></svg>
+              <svg class="main-footer__social-logo main-footer__social-logo--twitt" width="23" height="20"><use xlink:href="#footer-twitter"></use></svg>
               <span class="visually-hidden">Twitter</span>
             </a>
           </li>
         </ul>
-        <div class="main-footer__copyright copyright">
+        <a class="main-footer__copyright copyright">
           <p class="copyrgiht__creator">Разработано</p>
-          <a class="copyright__logo" href="#">
-            <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="Html-academy">
-          </a>
-        </div>
+          <div class="copyright__logo" href="#">
+            <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#footer-htmlacademy" alt="HtmlAcademy"></use></svg>
+          </div>
+        </a>
       </div>
     </footer>
     <div class="overlay">
