Pixel-perfect Главная №3

--- a/source/index.html
+++ b/source/index.html
@@ -195,7 +195,7 @@
           </div>
           <div class="weekly-goods__image-contaner">
             <picture>
-              <source media="(min-width: 1050px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x" width="525px" height="636px" >
+              <source media="(min-width: 1050px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x" width="525px" height="636px">
               <source media="(min-width: 668px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x" width="333px" height="404px" >
               <img class="weekly-goods__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Товар недели: корзинка">
             </picture>
@@ -239,7 +239,7 @@
               <p class="reviews__text">
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков,
                 как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
-                и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+                и&nbsp;мои фотографии сразу стали более стильными, а также набирают больше лайков!
               </p>
             </blockquote>
           </div>
@@ -282,9 +282,9 @@
         <div class="contacts__map-container">
           <div class="contacts__map-api" id="map">
             <picture>
-              <source media="(min-width: 1050px)" srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x" width="525px" height="457px" >
-              <source media="(min-width: 668px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x" width="768px" height="457px" >
-              <img src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+              <source media="(min-width: 1050px)" srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x">
+              <source media="(min-width: 668px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x">
+              <img class="contacts__map-img" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
             </picture>
           </div>
         </div>
@@ -294,36 +294,38 @@
       </section>
     </main>
     <footer class="main-footer">
-      <a class="main-footer__logo">
-        <svg class="main-footer__logo-img" width="102" height="34"><use xlink:href="#footer-mishka"></use></svg>
-      </a>
       <div class="main-footer__container">
-        <ul class="main-footer__social social-list">
-          <li class="social-list__item">
-            <a class="social-list__link" href="">
-              <svg class="main-footer__social-logo main-footer__social-logo--insta" width="22" height="21"><use xlink:href="#footer-instagram"></use></svg>
-              <span class="visually-hidden">Instagram</span>
-            </a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link" href="">
-              <svg class="main-footer__social-logo main-footer__social-logo--fb" width="15" height="28"><use xlink:href="#footer-facebook"></use></svg>
-              <span class="visually-hidden">Facebook</span>
-            </a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link" href="">
-              <svg class="main-footer__social-logo main-footer__social-logo--twitt" width="23" height="20"><use xlink:href="#footer-twitter"></use></svg>
-              <span class="visually-hidden">Twitter</span>
-            </a>
-          </li>
-        </ul>
-        <a class="main-footer__copyright copyright">
-          <p class="copyrgiht__creator">Разработано</p>
-          <div class="copyright__logo" href="#">
-            <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#footer-htmlacademy" alt="HtmlAcademy"></use></svg>
-          </div>
+        <a class="main-footer__logo">
+          <svg class="main-footer__logo-img" width="102" height="34"><use xlink:href="#footer-mishka"></use></svg>
         </a>
+        <div class="main-footer__inside-container">
+          <ul class="main-footer__social social-list">
+            <li class="social-list__item">
+              <a class="social-list__link" href="">
+                <svg class="main-footer__social-logo main-footer__social-logo--insta" width="22" height="21"><use xlink:href="#footer-instagram"></use></svg>
+                <span class="visually-hidden">Instagram</span>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link" href="">
+                <svg class="main-footer__social-logo main-footer__social-logo--fb" width="15" height="28"><use xlink:href="#footer-facebook"></use></svg>
+                <span class="visually-hidden">Facebook</span>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link" href="">
+                <svg class="main-footer__social-logo main-footer__social-logo--twitt" width="23" height="20"><use xlink:href="#footer-twitter"></use></svg>
+                <span class="visually-hidden">Twitter</span>
+              </a>
+            </li>
+          </ul>
+          <a class="main-footer__copyright copyright">
+            <p class="copyrgiht__creator">Разработано</p>
+            <div class="copyright__logo" href="#">
+              <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#footer-htmlacademy" alt="HtmlAcademy"></use></svg>
+            </div>
+          </a>
+        </div>
       </div>
     </footer>
     <div class="overlay">
