--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,7 +38,7 @@
         </g>
       </symbol>
     </svg>
-    <header class="main-header main-header--index">
+    <header class="main-header">
       <a href="index.html" class="main-header__logo">
         <picture>
           <source media="(min-width: 1050px)" srcset="img/logo-desktop.svg" width="149px" height="89px" >
@@ -46,7 +46,7 @@
           <img class="main-header__logo-image" src="img/logo-mobile.svg"  alt="Магазин &laquo;Мишка&raquo;">
         </picture>
       </a>
-      <nav class="main-nav main-nav--index">
+      <nav class="main-nav">
         <div class="main-nav__toggle-contatainer">
           <button class="main-nav__toggle main-nav__toggle--off main-nav__toggle--on" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
@@ -142,7 +142,7 @@
               </picture>
             </a>
             <div class="good__info-container">
-            <h2 class="good__title"><a>Большая корзинка для игрушек</a></h2>
+            <h2 class="good__title"><a>Большая корзинка для&nbsp;игрушек</a></h2>
               <p class="good__description">Диаметр 30 см, высота 30 см</p>
               <p class="good__bottom">
                 <span class="good__price">1 500 руб.</span>
@@ -159,11 +159,11 @@
         <h2 class="production__title">Процесс производства</h2>
         <div class="production__container">
           <picture>
-            <source media="(min-width: 1050px)" srcset="img/ideo-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 1050px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
             <source media="(min-width: 668px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
             <img class="catalog-video__image" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Не удалось загрузить видео">
           </picture>
-          <video class="production__media catalog-video" width="260" height="150">
+          <video class="production__media catalog-video">
             <source src="#" type="video/mishka-video.mp4">
             <source src="#" type="video/mishka-video.ogg">
             <source src="#" type="video/mishka-video.webm">
