--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,7 @@
       </a>
       <nav class="main-nav main-nav--index">
         <div class="main-nav__toggle-contatainer">
-          <button class="main-nav__toggle main-nav__toggle--off main-nav__toggle--on" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
         <div class="main-nav__wrapper">
             <ul class="main-nav__list site-nav">
@@ -334,16 +334,16 @@
         <p class="modal-add-item__size-title">Выберите размер:</p>
         <ul class="modal-add-item__select size-list">
           <li class="modal-add-item__item">
-            <input class="size-list__radio" type="radio" name="size-radio" value="size-S" id="s-size-add" checked>
+            <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-S" id="s-size-add" checked>
             <label class="size-list__label" for="s-size-add">S</label>
           </li>
           <li class="modal-add-item__item">
-            <input class="size-list__radio" type="radio" name="size-radio" value="size-M" id="m-size-add">
+            <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-M" id="m-size-add">
             <label class="size-list__label" for="m-size-add">M</label>
           </li>
-          <li class="smodal-add-item__item">
-            <input class="size-list__radio" type="radio" name="size-radio" value="size-L" id="l-size-add">
-            <label class="size-list__label" for="s-size-add">L</label>
+          <li class="modal-add-item__item">
+            <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-L" id="l-size-add">
+            <label class="size-list__label" for="l-size-add">L</label>
           </li>
         </ul>
         <button class="modal-add-item__btn btn" form="size-form" type="submit">Добавить</button>
