Работа над js№2

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -235,5 +235,6 @@
         </form>
       </section>
     </div>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
