--- a/source/index.html
+++ b/source/index.html
@@ -190,7 +190,7 @@
               </tr>
             </table>
             <p class="weekly-goods__price">Цена: 990 руб.</p>
-            <a class="btn weekly-goods__btn" href="">Заказать</a>
+            <a class="btn weekly-goods__btn popup-show" href="">Заказать</a>
           </div>
           <div class="weekly-goods__image-contaner">
             <picture>
