--- a/source/catalog.html
+++ b/source/catalog.html
@@ -106,7 +106,7 @@
               <p class="good__description">Рост 30 см, вес 200 г</p>
               <p class="good__bottom">
                 <span class="good__price">1 200 руб.</span>
-                <a class="good__cart" href="#modal-form">
+                <a class="good__cart popup-show" href="#modal-form">
                   <svg class="good__cart-icon" width="18" height="19"><use xlink:href="#icon-cart"></use></svg>
                   <span class="visually-hidden">В корзину</span>
                 </a>
@@ -126,7 +126,7 @@
               <p class="good__description">Диаметр 15 см, высота 10 см</p>
               <p class="good__bottom">
                 <span class="good__price">690 руб.</span>
-                <a class="good__cart" href="#modal-form">
+                <a class="good__cart popup-show" href="#modal-form">
                   <svg class="good__cart-icon" width="18" height="19"><use xlink:href="#icon-cart"></use></svg>
                   <span class="visually-hidden">В корзину</span>
                 </a>
@@ -146,7 +146,7 @@
               <p class="good__description">Диаметр 30 см, высота 30 см</p>
               <p class="good__bottom good__bottom--toys-cart">
                 <span class="good__price">1 500 руб.</span>
-                <a class="good__cart" href="#modal-form">
+                <a class="good__cart popup-show" href="#modal-form">
                   <svg class="good__cart-icon" width="18" height="19"><use xlink:href="#icon-cart"></use></svg>
                   <span class="visually-hidden">В корзину</span>
                 </a>
