--- a/source/form.html
+++ b/source/form.html
@@ -237,5 +237,6 @@
         </div>
       </div>
     </footer>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
