--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Мишка</title>
     <link rel="stylesheet" href="css/style.css">
+
   </head>
   <body>
     <svg style="display:none">
@@ -350,7 +351,8 @@
         </form>
       </section>
     </div>
-    <script  src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=<227779b2-ff5d-4304-bc15-fc57e93a93e0>&lang=ru_RU" type="text/javascript">
+    </script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
