--- a/source/form.html
+++ b/source/form.html
@@ -104,7 +104,7 @@
         </p>
         <div class="form-sorting__fieldset order-fieldset">
           <div class="order-fieldset__container order-fieldset__container--type">
-            <div class="order-fieldset__legend order-fieldset__legend--type"><span>Тип</span></div>
+            <h3 class="order-fieldset__legend order-fieldset__legend--type"><span>тип</span></h3>
             <ul class="order-fieldset__list">
               <li class="order-fieldset__item">
                 <input class="visually-hidden order-fieldset__radio" type="radio" name="radioSort" value="accessory-sort" id="accessory" checked>
@@ -119,7 +119,7 @@
         </div>
         <div class="form-sorting__fieldset order-fieldset order-fieldset-grey">
           <div class="order-fieldset__container order-fieldset__container--color">
-            <div class="order-fieldset__legend order-fieldset__legend--color"><span>Цвет</span></div>
+            <h3 class="order-fieldset__legend order-fieldset__legend--color"><span>цвет</span></h3>
             <ul class="order-fieldset__list order-fieldset__color-list">
               <li class="order-fieldset__item order-fieldset__color-item">
                 <input class="visually-hidden order-fieldset__checkbox" type="checkbox" name="white-color" id="filter-white" checked>
@@ -150,7 +150,7 @@
         </div>
         <div class="form-sorting__fieldset order-fieldset">
           <div class="order-fieldset__container order-fieldset__container--name">
-            <div class="order-fieldset__legend order-fieldset__legend--name"><span>ФИО</span></div>
+            <h3 class="order-fieldset__legend order-fieldset__legend--name"><span>фио</span></h3>
             <ul class="order-fieldset__list order-fieldset__list--name">
               <li class="order-fieldset__item order-fieldset__item--name">
                 <label class="order-fieldset__label" for="customer-name">Имя:</label>
@@ -169,7 +169,7 @@
         </div>
         <div class="form-sorting__fieldset order-fieldset order-fieldset-grey">
           <div class="order-fieldset__container order-fieldset__container--contact order-fieldset__container--contact--first">
-            <div class="order-fieldset__legend"><span>ТЕЛ</span></div>
+            <h3 class="order-fieldset__legend"><span>тел</span></h3>
             <div class="order-fieldset__icon-input-contaner">
               <label class="order-fieldset__label visually-hidden" for="customer-phone">Телефон</label>
               <input class="order-fieldset--phone-input" type="tel" name="phone-number" id="customer-phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
@@ -179,7 +179,7 @@
         </div>
         <div class="form-sorting__fieldset order-fieldset order-fieldset-grey">
           <div class="order-fieldset__container order-fieldset__container--contact">
-            <div class="order-fieldset__legend"><span>E-MAIL</span></div>
+            <h3 class="order-fieldset__legend"><span>e-mail</span></h3>
             <div class="order-fieldset__icon-input-contaner">
               <label class="order-fieldset__label visually-hidden" for="customer-email">Электронная почта</label>
               <input class="order-fieldset--email-input" type="email" name="email" id="customer-email" placeholder="Ваш Email*" required>
@@ -190,7 +190,7 @@
         <div class="form-sorting__additional-contaner">
           <div class="form-sorting__fieldset form-sorting__fieldset--bottom order-fieldset">
             <div class="order-fieldset__container order-fieldset__container--comment order-fieldset__container--contact">
-              <div class="order-fieldset__legend"><span>Доп</span></div>
+              <h3 class="order-fieldset__legend"><span>доп</span></h3>
               <label class="order-fieldset__label visually-hidden" for="customer-comment">Комментарий к заказу</label>
               <textarea class="form-sorting__textarea" name="comment" id="customer-comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
