--- a/source/catalog.html
+++ b/source/catalog.html
@@ -212,7 +212,7 @@
         </div>
       </div>
     </footer>
-    <div class="overlay">
+    <div class="overlay"></div>
       <section class="modal-add-item">
         <form class="modal-add-item__form" id="size-form" method="get" action="https://echo.htmlacademy.ru">
         <h2 class="modal-add-item__title">Добавить в корзину</h2>
@@ -234,7 +234,6 @@
         <button class="modal-add-item__btn btn" form="size-form" type="submit">Добавить</button>
         </form>
       </section>
-    </div>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
