Правки перед сдачей

--- a/source/index.html
+++ b/source/index.html
@@ -232,7 +232,7 @@
           <ul class="main-footer__social social-list">
             <li class="social-list__item">
               <a class="social-list__link" href="">
-                <svg class="social-list__social-logo social-list__social-logo--insta" width="22" height="21"><use xlink:href="#icon-insta" "=""></use></svg>
+                <svg class="social-list__social-logo social-list__social-logo--insta" width="22" height="21"><use xlink:href="#icon-insta"></use></svg>
                 <span class="visually-hidden">Instagram</span>
               </a>
             </li>
@@ -259,27 +259,27 @@
       </div>
     </footer>
     <div class="overlay"></div>
-      <section class="modal-add-item">
-        <form class="modal-add-item__form" id="size-form" method="get" action="https://echo.htmlacademy.ru">
-        <h2 class="modal-add-item__title">Добавить в корзину</h2>
-        <p class="modal-add-item__size-title">Выберите размер:</p>
-        <ul class="modal-add-item__select size-list">
-          <li class="modal-add-item__item">
-            <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-S" id="s-size-add" checked="">
-            <label class="size-list__label" for="s-size-add">S</label>
-          </li>
-          <li class="modal-add-item__item">
-            <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-M" id="m-size-add">
-            <label class="size-list__label" for="m-size-add">M</label>
-          </li>
-          <li class="modal-add-item__item">
-            <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-L" id="l-size-add">
-            <label class="size-list__label" for="l-size-add">L</label>
-          </li>
-        </ul>
-        <button class="modal-add-item__btn btn" form="size-form" type="submit">Добавить</button>
-        </form>
-      </section>
+    <section class="modal-add-item">
+      <form class="modal-add-item__form" id="size-form" method="get" action="https://echo.htmlacademy.ru">
+      <h2 class="modal-add-item__title">Добавить в корзину</h2>
+      <p class="modal-add-item__size-title">Выберите размер:</p>
+      <ul class="modal-add-item__select size-list">
+        <li class="modal-add-item__item">
+          <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-S" id="s-size-add" checked="">
+          <label class="size-list__label" for="s-size-add">S</label>
+        </li>
+        <li class="modal-add-item__item">
+          <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-M" id="m-size-add">
+          <label class="size-list__label" for="m-size-add">M</label>
+        </li>
+        <li class="modal-add-item__item">
+          <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-L" id="l-size-add">
+          <label class="size-list__label" for="l-size-add">L</label>
+        </li>
+      </ul>
+      <button class="modal-add-item__btn btn" form="size-form" type="submit">Добавить</button>
+      </form>
+    </section>
     <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVqkwpYNhXVEYAjw8zgUpJm9Kasj1M9ZY&callback=initMap">
     </script>
     <script type="text/javascript" src="js/script.js"></script>
