--- a/source/catalog.html
+++ b/source/catalog.html
@@ -123,9 +123,9 @@
                 <img class="good__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg 2x" alt="Изображение товара:корзина для игрушек">
               </picture>
             </a>
-            <div class="good__info-container">
+            <div class="good__info-container good__info-container--toys-cart">
             <h2 class="good__title"><a href="">Большая корзинка для&nbsp;игрушек</a></h2>
-              <p class="good__description">Диаметр 30 см, высота 30 см</p>
+              <p class="good__description good__description--toys-cart">Диаметр 30 см, высота 30 см</p>
               <p class="good__bottom good__bottom--toys-cart">
                 <span class="good__price">1 500 руб.</span>
                 <a class="good__cart popup-show" href="#modal-form">
@@ -171,7 +171,7 @@
           <ul class="main-footer__social social-list">
             <li class="social-list__item">
               <a class="social-list__link" href="">
-                <svg class="social-list__social-logo social-list__social-logo--insta" width="22" height="21"><use xlink:href="#icon-insta" "=""></use></svg>
+                <svg class="social-list__social-logo social-list__social-logo--insta" width="22" height="21"><use xlink:href="#icon-insta"></use></svg>
                 <span class="visually-hidden">Instagram</span>
               </a>
             </li>
@@ -198,27 +198,27 @@
       </div>
     </footer>
     <div class="overlay"></div>
-      <section class="modal-add-item">
-        <form class="modal-add-item__form" id="size-form" method="get" action="https://echo.htmlacademy.ru">
-        <h2 class="modal-add-item__title">Добавить в корзину</h2>
-        <p class="modal-add-item__size-title">Выберите размер:</p>
-        <ul class="modal-add-item__select size-list">
-          <li class="modal-add-item__item">
-            <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-S" id="s-size-add" checked="">
-            <label class="size-list__label" for="s-size-add">S</label>
-          </li>
-          <li class="modal-add-item__item">
-            <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-M" id="m-size-add">
-            <label class="size-list__label" for="m-size-add">M</label>
-          </li>
-          <li class="modal-add-item__item">
-            <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-L" id="l-size-add">
-            <label class="size-list__label" for="l-size-add">L</label>
-          </li>
-        </ul>
-        <button class="modal-add-item__btn btn" form="size-form" type="submit">Добавить</button>
-        </form>
-      </section>
+    <section class="modal-add-item">
+      <form class="modal-add-item__form" id="size-form" method="get" action="https://echo.htmlacademy.ru">
+      <h2 class="modal-add-item__title">Добавить в корзину</h2>
+      <p class="modal-add-item__size-title">Выберите размер:</p>
+      <ul class="modal-add-item__select size-list">
+        <li class="modal-add-item__item">
+          <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-S" id="s-size-add" checked="">
+          <label class="size-list__label" for="s-size-add">S</label>
+        </li>
+        <li class="modal-add-item__item">
+          <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-M" id="m-size-add">
+          <label class="size-list__label" for="m-size-add">M</label>
+        </li>
+        <li class="modal-add-item__item">
+          <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-L" id="l-size-add">
+          <label class="size-list__label" for="l-size-add">L</label>
+        </li>
+      </ul>
+      <button class="modal-add-item__btn btn" form="size-form" type="submit">Добавить</button>
+      </form>
+    </section>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
