--- a/source/form.html
+++ b/source/form.html
@@ -178,7 +178,7 @@
           <ul class="main-footer__social social-list">
             <li class="social-list__item">
               <a class="social-list__link" href="">
-                <svg class="social-list__social-logo social-list__social-logo--insta" width="22" height="21"><use xlink:href="#icon-insta" "=""></use></svg>
+                <svg class="social-list__social-logo social-list__social-logo--insta" width="22" height="21"><use xlink:href="#icon-insta"></use></svg>
                 <span class="visually-hidden">Instagram</span>
               </a>
             </li>
@@ -204,5 +204,6 @@
         </div>
       </div>
     </footer>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
