--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,7 +54,7 @@
                 </a>
               </li>
             </ul>
-            <p class="user-nav__delivery">
+            <p class="main-nav__delivery">
               Бесплатная доставка по России
             </p>
         </div>
