--- a/source/index.html
+++ b/source/index.html
@@ -184,7 +184,7 @@
             Контакты
           </h2>
           <table class="contacts__specifications">
-            <tr class="contacts__tr--first">
+            <tr class="contacts__tr contacts__tr--first">
               <td class="contacts__field">
                 e-mail:
               </td>
@@ -192,7 +192,7 @@
                 <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
               </td>
             </tr>
-            <tr class="contacts__tr--second">
+            <tr class="contacts__tr contacts__tr--second">
               <td class="contacts__field">
                 адрес:
               </td>
