--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Мишка</title>
+    <link rel="preload" href="fonts/opensans-regular.woff2">
+    <link rel="preload" href="fonts/opensans-bold.woff2">
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/picturefill.min.js"></script>
   </head>
@@ -282,6 +284,6 @@
     </section>
     <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVqkwpYNhXVEYAjw8zgUpJm9Kasj1M9ZY&callback=initMap">
     </script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/script.min.js"></script>
   </body>
 </html>
