--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Мишка</title>
+    <link rel="preload" href="fonts/opensans-regular.woff2">
+    <link rel="preload" href="fonts/opensans-bold.woff2">
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/picturefill.min.js"></script>
   </head>
@@ -219,6 +221,6 @@
       <button class="modal__btn btn" form="size-form" type="submit">Добавить</button>
       </form>
     </section>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/script.min.js"></script>
   </body>
 </html>
