--- a/source/index.html
+++ b/source/index.html
@@ -70,14 +70,14 @@
         <ul class="directions__list">
           <li class="directions__item">
             <a class="directions__link" href="">
-              <svg class="directions__icon directions__icon--interior" width="40" height="62"><use xlink:href="#icon-interior"></use></svg>
               <span>Предметы интерьера</span>
+              <span><svg class="directions__icon directions__icon--interior" width="40" height="62"><use xlink:href="#icon-interior"></use></svg></span>
             </a>
           </li>
           <li class="directions__item">
             <a class="directions__link" href="">
-              <svg class="directions__icon directions__icon--toy" width="60" height="60"><use xlink:href="#icon-toy"></use></svg>
               <span>Детские игрушки</span>
+              <span><svg class="directions__icon directions__icon--toy" width="60" height="60"><use xlink:href="#icon-toy"></use></svg></span>
             </a>
           </li>
         </ul>
